Jenkinsfile add